<resources>
    <string name="app_name">MotorApp</string>
    <string name="action_settings">Settings</string>
    <string name="textViewApp">MotorApp</string>
    <string name="imagenpiston">imagenPistones</string>
    <string name="title_activity_gif_image">GifImageActivity</string>
    <string name="title_activity_animation">AnimationActivity</string>
    <string name="title_activity_gif_web_view">GifWebView</string>
    <string name="title_activity_gif_decoder">GifDecoder</string>
    <string name="title_activity_gif_decoder_view">GifDecoderView</string>
    <string name="title_activity_gif_movie_view">GifMovieView</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_administracion">Administracion</string>
    <string name="title_activity_taller">Taller</string>
    <string name="title_activity_nuevo_cliente">NuevoCliente</string>
    <string name="title_activity_nuevo_vehiculo">NuevoVehiculo</string>
    <string name="title_activity_tarea_mecanico">TareaMecanico</string>
    <string name="title_activity_administracion_seleccionar_marca">AdministracionSeleccionarMarca
    </string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="title_activity_lista_tareas_taller">ListaTareasTaller</string>
    <string name="title_activity_tarea_taller">TareaTaller</string>
    <string name="title_activity_buscar_dni">BuscarDni</string>
    <string name="title_activity_dni_existe">DniExiste</string>
    <string name="title_activity_dni_no_existe">DniNoExiste</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="coche">DNI</string>
    <string name="buscarMatricula">Buscar Matrícula</string>
    <string name="matricula">Matrícula</string>
    <string name="datosCliente">DATOS CLIENTE:</string>
    <string name="nombreCliente">Nombre</string>
    <string name="apellidosCliente">Apellidos</string>
    <string name="emailCliente">E-mail</string>
    <string name="telefonoCliente">Teléfono</string>
    <string name="cocheCliente">Coche</string>
    <string name="nuevoCoche">NUEVO VEHÍCULO:</string>
    <string name="marcaCoche">Marca</string>
    <string name="modeloCoche">Modelo</string>
    <string name="numMotor">Num. Motor</string>
    <string name="trabajoCoche">Trabajo</string>
    <string name="terminar">Terminar</string>
</resources>
