<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ultrablue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chufaschin.mockupstallerizate.VersionAdministracion.DniNoExiste">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/ultrablue"
            android:onClick="buscarDni"
            android:paddingLeft="10dp"
            android:src="@drawable/arrowback" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:autoText="false"
            android:background="@color/ultrablue"
            android:paddingLeft="40dp"
            android:text="@string/textViewApp"
            android:textAppearance="@style/Base.Widget.AppCompat.ActionBar"
            android:textSize="@android:dimen/app_icon_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datosCliente"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="3dp"
            android:text="@string/nombreCliente"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="3dp"
            android:text="@string/apellidosCliente"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="3dp"
            android:text="@string/emailCliente"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="3dp"
            android:text="@string/telefonoCliente"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView33"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginBottom="3dp"
            android:text="@string/matricula"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/cocheCliente"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/nombreEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/apellidoEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textSize="10sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/telefonoEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textSize="10dp" />

        <EditText
            android:id="@+id/matriculaEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="0.03"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/cocheEditText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="0.03"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="true"
            android:textSize="15dp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Siguientebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom|right"
            android:onClick="lanzarNuevoVehiculo"
            android:text="@string/siguiente" />
    </RelativeLayout>
</RelativeLayout>
