<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.example.chufaschin.mockupstallerizate.VersionAdministracion.NuevoVehiculo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"

        android:orientation="vertical"
        android:weightSum="1">

        <ImageButton
            android:id="@+id/arrowBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.03"
            android:background="#ffffff"
            android:nestedScrollingEnabled="true"
            android:onClick="lanzarMatriculaExiste"
            android:src="@drawable/arrowback" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_margin="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_weight="0.23"
                android:text="@string/nuevoCoche"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FF696969"
                android:textSize="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terminar"
                android:id="@+id/Terminar"
                android:layout_gravity="right"
                android:layout_weight="0.00"
                android:layout_alignTop="@+id/textView4"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="22dp"
                android:layout_marginEnd="22dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="0dp"
                android:id="@+id/linearLayout5">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="0.00"
                    android:text="@string/matricula"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FF696969" />

                <EditText
                    android:id="@+id/matriculaEditText"
                    android:layout_width="match_parent"
                    android:selectAllOnFocus="true"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1"
                android:layout_below="@+id/linearLayout5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout7">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="0.00"
                    android:text="@string/marcaCoche"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FF696969" />

                <EditText
                    android:id="@+id/marcaEdittText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1"
                android:layout_below="@+id/linearLayout7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout8">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="0.00"
                    android:text="@string/modeloCoche"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FF696969" />

                <EditText
                    android:id="@+id/modeloEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1"
                android:layout_below="@+id/linearLayout8"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/linearLayout9">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="0.00"
                    android:text="@string/numMotor"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FF696969" />

                <EditText
                    android:id="@+id/numMotorEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1"
                android:layout_weight="0.03"
                android:layout_below="@+id/linearLayout9"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="0.00"
                    android:text="@string/trabajoCoche"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FF696969" />

                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="167dp">

                    <EditText
                        android:id="@+id/trabajoEditText"
                        android:layout_width="fill_parent"
                        android:layout_height="162dp" />
                </ScrollView>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/textViewApp"
        android:textAppearance="@style/Base.Widget.AppCompat.ActionBar"
        android:textSize="@android:dimen/app_icon_size" />


</RelativeLayout>
