<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/ultrablue">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="0"
        android:background="@color/ultrablue">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_weight="0.08"
                    android:src="@drawable/arrowback"
                    android:background="#ffffff"
                    android:layout_width="50px"
                    android:layout_height="match_parent"
                    android:onClick="lanzarMenu" />

                <TextView
                    android:layout_width="320dp"
                    android:layout_height="100dp"
                    android:paddingLeft="30dp"
                    android:text="@string/textViewApp"
                    android:id="@+id/textView8"
                    android:textSize="@android:dimen/app_icon_size"
                    android:textAppearance="@style/Base.Widget.AppCompat.ActionBar"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:background="#ffffff"
                    android:autoText="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buscarMatricula"
                        android:id="@+id/textView9"
                        android:layout_gravity="left|center_horizontal"
                        android:textColor="#FF696969"
                        android:textSize="20dp"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="#ffffff">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/findMatricula"
                        android:layout_weight="1"
                        android:inputType="text" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/searchBtn"
                        android:background="@drawable/magnify" />
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="476dp"
                android:background="#ffffff">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/siguiente"
                    android:id="@+id/Siguientebtn"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="27dp" />

            </RelativeLayout>
        </LinearLayout>

    </TableLayout>
</ScrollView>